--- a/src/components/paddle-board-info/paddle-board-info.less
+++ b/src/components/paddle-board-info/paddle-board-info.less
@@ -24,7 +24,7 @@
 		transition: transform 0.3s ease, opacity 0.3s ease;
 
 		img {
-			width: 80%;
+			width: 100%;
 			height: auto;
 		}
 
